# fun_with_plots

./: .env_example  .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
python/: requirements.txt  snuffling.py
src/: errors.rs  main.rs  model.rs
src/data/: data_provider.rs  mod.rs  models.rs  weather.rs  weather_location.rs
src/data/football/: conversions.rs  football.rs  mod.rs  models.rs
src/data/weather/: conversions.rs  mod.rs  models.rs  weather.rs
src/plot/: animation.rs  chart.rs  mod.rs
