[package]
name = "graph-wiggler"
version = "0.1.0"
edition = "2021"
author = "snusnusnu (aka Steffen)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.19"
plotly = "0.7.0"
plotters = "0.3.0"
dotenv = "0.15.0"
thiserror = "1.0"
config = "0.13.1"
env_logger = "0.9.0"
log = "0.4.17"
