[package]
name = "graph-wiggler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.19"
thiserror = "1.0"
polars = "0.23.2"

# plotting
plotly = "0.7.0"
plotters = "0.3.0"

# Settings
config = "0.13.1"
dotenv = "0.15.0"

# cli
clap = { version = "3.2.17", features = ["derive"] }

# logging
env_logger = "0.9.0"
log = { version = "0.4.17", feature = ["env_logger"] }